@@ -1,3 +1,10 @@
+2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCval.c,
+	  src/SDCCast.c:
+	  support/regression/tests/bug-3391.c:
+	  Fix bug #3391.
+
 2022-05-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/z80/gen.c:
